2009-11-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): Avoid code
	only used on truly ancient kernel if configuration requires a more
	recent kernel.

2009-11-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3662]
	* stdlib/random_r.c: Fix comments for __initstate_r and __setstate_r.
	Patch by Christopher Neufeld <glibcbugs0000@cneufeld.ca>.

	* sysdeps/unix/grantpt.c (pts_name): Take additional parameter,
	pass it on to __ptsname_internal.
	(grantpt): Pass stat64 pointer to pts_name.  Remove stat call here.
	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): New function.
	All the code from __ptsname_r but take additional parameter.  Use that
	instead of pointer to local stat64 variable.
	(__ptsname_r): Call __ptsname_internal with pointer to local stat64
	variable.
	* include/stdlib.h: Declare __ptsname_internal.

	* sysdeps/unix/grantpt.c (grantpt): Use CLOSE_ALL_FDS is available
	before the exec.
	* sysdeps/unix/sysv/linux/grantpt.c: New file.
	* login/programs/pt_chown.c (main): Don't print message on errors
	when doing real work.

	* sysdeps/unix/grantpt.c (grantpt): Only get tty group information
	once.

	* csu/elf-init.c (__libc_csu_irel): New function.  Code to perform
	irel relocations split out from...
	(__libc_csu_init): ...here.
	* csu/libc-start.c [!SHARED]: Call __libc_csu_irel early.

2009-11-23  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/stat.h: Use struct timespec
	for timestamps also if __USE_XOPEN2K8.
	* sysdeps/unix/sysv/linux/sparc/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/stat.h: Likewise.

2009-11-22  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (restart): Try harder to re-exec.

	* sunrpc/create_xid.c (_create_xid): Reinitialize state after fork.

	* sysdeps/unix/sysv/linux/ntp_gettimex.c:  New file.